add controller deleteByID
